monospace to avoid emoji on mobile

--- a/_sass/breakpoints/_600up.scss
+++ b/_sass/breakpoints/_600up.scss
@@ -26,6 +26,10 @@ figure {
     margin: -2em auto 2em;
 }
 
+.footnotes .reversefootnote {
+    font-size: 1em;
+}
+
 footer .copy .powered {
     display: inline;
 }
